--- a/index.html
+++ b/index.html
@@ -9,41 +9,46 @@
     <title>WeFinance</title>
 </head>
 <body>
-    <header class="width_margin">
-        <div class="top_header_container between">
-            <a href="#" class="to_top">
-                <div class="header_start d-flex">
+    <header>
+        <div class="top_header_container">
+            <a href="#">
+                <div class="header_start">
                     <img class="logo" src="img/logo.png" alt="logo">
                     <p class="logo_text">WeFinance</p>
                 </div>
             </a>
-            <nav class="nav d-flex">
-                <a class="nav_link center" href="#">Home</a>
-                <a class="nav_link center" href="#">About Us</a>
-                <a class="nav_link center" href="#">How it Works</a>
-                <a class="nav_link center" href="#">Our Services</a>
-                <a class="nav_link center" href="#">More</a>
+            <nav class="nav">
+                <a class="nav_link" href="#">Home</a>
+                <a class="nav_link" href="#">About Us</a>
+                <a class="nav_link" href="#">How it Works</a>
+                <a class="nav_link" href="#">Our Services</a>
+                <a class="nav_link" href="#">More</a>
             </nav>
             <a class="button-blue button" href="#">Contact Us</a>
+            <div class="hamburger menu-toggle">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
         </div>
-        <div class="middle_header_container width_margin">
+        <div class="middle_header_container">
             <p class="H1">Financial<br>Solutions.</p>
             <p class="text">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Seperated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
             <a class="button button-darkblue" href="#">Let's Talk</a>
         </div>
     </header>
-    <main class="width_margin">
+    <main>
         <div class="main_container">
-            <div class="main_one center">
-                <div class="main_first_part flex_column">
+            <div class="main_one">
+                <div class="main_first_part">
                     <p class="title">Our Firm</p>
                     <p class="second_title">We are Agile. Constantly<br>Focused on Growth and<br>Being Better</p>
                     <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                    <p class="third_title button_distance">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                     <a class="button button-blue" href="#">Read About Us</a>
                 </div>
-                <div class="main_second_part d-flex">
-                    <div class="left_side flex_column">
+                <div class="main_second_part">
+                    <div class="second_side">
                         <div class="block_one blocks">
                             <p class="block_number">18</p>
                             <p class="block_description">Years Expirience</p>
@@ -53,7 +58,7 @@
                             <p class="block_description">Average rating</p>
                         </div>
                     </div>
-                    <div class="right_side flex_column">
+                    <div class="second_side">
                         <div class="block_three blocks">
                             <p class="block_number">240+</p>
                             <p class="block_description">Completed Projects</p>
@@ -68,20 +73,20 @@
             <div class="main_two">
                 <p class="title">Our Services</p>
                 <p class="second_title">What We Offer</p>
-                <div class="cards_div center">
-                    <div class="card_one shadow flex_column center">
+                <div class="cards_div">
+                    <div class="card_one shadow">
                         <img src="img/Icon-wallet.png" alt="wallet" class="card_pic">
                         <p class="card_text">#1</p>
                         <p class="card_title">Finincial Report</p>
                         <p class="card_text">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
                     </div>
-                    <div class="card_two shadow flex_column center">
+                    <div class="card_two shadow">
                         <img src="img/Icon-Backpack.png" alt="backpack" class="card_pic">
                         <p class="card_text_two">#2</p>
                         <p class="card_title_two">Manage Investments</p>
                         <p class="card_text_two">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
                     </div>
-                    <div class="card_three shadow flex_column center">
+                    <div class="card_three shadow">
                         <img src="img/Icon-Analytic.png" alt="analytic" class="card_pic">
                         <p class="card_text_three">#3</p>
                         <p class="card_title_two">Finincial Report</p>
@@ -89,34 +94,34 @@
                     </div>
                 </div>
             </div>
-            <div class="main_three flex_column">
+            <div class="main_three">
                 <p class="title_neg">Key Features</p>
                 <p class="second_title_neg">Manage Your<br>Finances From<br>one Place</p>
                 <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                 <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                <a class="button-darkblue button" href="#">Check All Fitures</a>
+                <a class="button main_button button-darkblue" href="#">Check All Fitures</a>
                 <img src="img/main pic.png" alt="main_pic" class="main_pic">
                 <img src="img/dotted.png" alt="dots" class="dots">
             </div>
-            <div class="main_four center">
-                <div class="four_left_side d-flex">
-                    <div class="combo_box flex_column">
-                        <a href="#" class="link_box">
-                            <div class="box_one boxes flex_column">
-                                <div class="tv_icon rect center"><img src="img/Game.png" alt=""></div>
+            <div class="main_four">
+                <div class="four_left_side">
+                    <div class="combo_box">
+                        <a href="#">
+                            <div class="boxes">
+                                <div class="rect"><img src="img/Game.png" alt=""></div>
                                 <p class="box_title">Innovative<br>Solutions</p>
                             </div>
                         </a>
-                        <a href="#" class="link_box">
-                            <div class="box_two boxes flex_column">
-                                <div class="tv_icon rect center"><img src="img/Call.png" alt=""></div>
+                        <a href="#">
+                            <div class="boxes">
+                                <div class="rect"><img src="img/Call.png" alt=""></div>
                                 <p class="box_title">24/7<br>Support</p>
                             </div>
                         </a>
                     </div>
-                    <a href="#" class="link_box_center d-flex">
-                        <div class="solo_box boxes flex_column">
-                            <div class="tv_icon rect center"><img src="img/3 User.png" alt=""></div>
+                    <a href="#" class="link_box_center">
+                        <div class="solo_box boxes">
+                            <div class="rect"><img src="img/3 User.png" alt=""></div>
                             <p class="box_title">Professional<br>Team</p>
                         </div>
                     </a>
@@ -124,60 +129,58 @@
                 <div class="four_text_side">
                     <p class="title four_title">Start Now</p>
                     <p class="second_title four_second_title">Start Now & Make<br>Your Finances<br>Clear & Organized</p>
-                    <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                    <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                 </div>
             </div>
             <div class="main_five">
                 <p class="title">Our Services</p>
                 <p class="second_title">Latest News</p>
-                <div class="news_div center">
+                <div class="news_div">
                     <div class="news">
-                        <img src="img/new 1.png" alt="" class="news_pic">
+                        <img src="img/new 1.png" alt="">
                         <div class="out_of_image">
                             <p class="text date">January 01, 2021</p>
                             <p class="card_title_two black">How to Start a<br>Successful in 2020</p>
-                            <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                            <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
                             <a class="button button-blue" href="#">Read More</a>
                         </div>
                     </div>
                     <div class="news">
-                        <img src="img/new 2.png" alt="" class="news_pic">
+                        <img src="img/new 2.png" alt="">
                         <div class="out_of_image">
                             <p class="text date">January 01, 2021</p>
                             <p class="card_title_two black">Grow Your Business with<br>Email Marketing</p>
-                            <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                            <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
                             <a class="button button-blue" href="#">Read More</a>
                         </div>
                     </div>
                     <div class="news">
-                        <img src="img/new 3.png" alt="" class="news_pic">
+                        <img src="img/new 3.png" alt="">
                         <div class="out_of_image">
                             <p class="text date">January 01, 2021</p>
                             <p class="card_title_two black">The 4 Pillars Every Online Business</p>
-                            <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                            <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
                             <a class="button button-blue" href="#">Read More</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="main_six flex_column center">
+            <div class="main_six">
                 <p class="title cyan">Contact With Us</p>
                 <p class="second_title white">Interested?<br>Let's Start a Projects Together</p>
-                <a class="button button-blue" href="#">Contact Us</a>
+                <a class="button main_button button-blue" href="#">Contact Us</a>
             </div>
         </div>
     </main>
-    <footer class="width_margin">
-        <div class="footer_container between">
+    <footer>
+        <div class="footer_container">
             <div class="footer_first">
-                <div class="d-flex flex_column">
-                    <div class="footer_logo center">
-                        <img class="logo" src="img/footer_logo.png" alt="logo">
-                        <p class="logo_text black">WeFinance</p>
-                    </div>
-                    <p class="third_title margin-top">WeFinance is the highest rated expert<br>team in the world</p>
+                <div class="footer_logo">
+                    <img class="logo" src="img/footer_logo.png" alt="logo">
+                    <p class="logo_text black">WeFinance</p>
                 </div>
+                <p class="third_title margin-top">WeFinance is the highest rated expert<br>team in the world</p>
             </div>
             <div class="footer_second">
                 <a href="#" class="nav_link1 black1">Home</a>
@@ -189,24 +192,25 @@
                 <a href="#" class="nav_link1 black1">How it Works</a>
                 <a href="#" class="nav_link1 black1">FAQ</a>
             </div>
-            <div class="footer_third flex_column between">
-                <div class="social_media d-flex">
+            <div class="footer_third">
+                <div class="social_media">
                     <img src="img/facebook.png" alt="facebook" class="soc_media">
                     <img src="img/instagram.png" alt="insagram" class="soc_media">
                     <img src="img/twitter.png" alt="twitter" class="soc_media">
                 </div>
             </div>
         </div>
-        <div class="footer_under between">
+        <div class="footer_under">
             <div class="under_start">
                 <p class="third_title copyright">©2021 WeFinance</p>
             </div>
-            <div class="social_media help d-flex">
+            <div class="social_media help">
                 <p class="third_title">Help</p>
                 <p class="third_title">Term & Conditions</p>
                 <p class="third_title">Privacy</p>
             </div>
         </div>
     </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
