--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a class="button button-blue" href="#">Read About Us</a>
                 </div>
                 <div class="main_second_part">
-                    <div class="second_side">
+                    <div class="second_side up">
                         <div class="block_one blocks">
                             <p class="block_number">18</p>
                             <p class="block_description">Years Expirience</p>
@@ -58,7 +58,7 @@
                             <p class="block_description">Average rating</p>
                         </div>
                     </div>
-                    <div class="second_side">
+                    <div class="second_side down">
                         <div class="block_three blocks">
                             <p class="block_number">240+</p>
                             <p class="block_description">Completed Projects</p>
