--- a/index.html
+++ b/index.html
@@ -38,139 +38,137 @@
         </div>
     </header>
     <main>
-        <div class="main_container">
-            <div class="main_one">
-                <div class="main_first_part">
-                    <p class="title">Our Firm</p>
-                    <p class="second_title">We are Agile. Constantly<br>Focused on Growth and<br>Being Better</p>
-                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                    <p class="third_title button_distance">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                    <a class="button button-blue" href="#">Read About Us</a>
-                </div>
-                <div class="main_second_part">
-                    <div class="second_side up">
-                        <div class="block_one blocks">
-                            <p class="block_number">18</p>
-                            <p class="block_description">Years Expirience</p>
-                        </div>
-                        <div class="block_two blocks">
-                            <p class="block_number">9.5/10</p>
-                            <p class="block_description">Average rating</p>
-                        </div>
-                    </div>
-                    <div class="second_side down">
-                        <div class="block_three blocks">
-                            <p class="block_number">240+</p>
-                            <p class="block_description">Completed Projects</p>
-                        </div>
-                        <div class="block_four blocks">
-                            <p class="block_number">150+</p>
-                            <p class="block_description">Served</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="main_two">
-                <p class="title">Our Services</p>
-                <p class="second_title">What We Offer</p>
-                <div class="cards_div">
-                    <div class="card_one shadow">
-                        <img src="img/Icon-wallet.png" alt="wallet" class="card_pic">
-                        <p class="card_text">#1</p>
-                        <p class="card_title">Finincial Report</p>
-                        <p class="card_text">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
-                    </div>
-                    <div class="card_two shadow">
-                        <img src="img/Icon-Backpack.png" alt="backpack" class="card_pic">
-                        <p class="card_text_two">#2</p>
-                        <p class="card_title_two">Manage Investments</p>
-                        <p class="card_text_two">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
-                    </div>
-                    <div class="card_three shadow">
-                        <img src="img/Icon-Analytic.png" alt="analytic" class="card_pic">
-                        <p class="card_text_three">#3</p>
-                        <p class="card_title_two">Finincial Report</p>
-                        <p class="card_text_three">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="main_three">
-                <p class="title_neg">Key Features</p>
-                <p class="second_title_neg">Manage Your<br>Finances From<br>one Place</p>
+        <div class="main_one">
+            <div class="main_first_part">
+                <p class="title">Our Firm</p>
+                <p class="second_title">We are Agile. Constantly<br>Focused on Growth and<br>Being Better</p>
                 <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                <a class="button main_button button-darkblue" href="#">Check All Fitures</a>
-                <img src="img/main pic.png" alt="main_pic" class="main_pic">
-                <img src="img/dotted.png" alt="dots" class="dots">
+                <p class="third_title button_distance">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                <a class="button button-blue" href="#">Read About Us</a>
             </div>
-            <div class="main_four">
-                <div class="four_left_side">
-                    <div class="combo_box">
-                        <a href="#">
-                            <div class="boxes">
-                                <div class="rect"><img src="img/Game.png" alt=""></div>
-                                <p class="box_title">Innovative<br>Solutions</p>
-                            </div>
-                        </a>
-                        <a href="#">
-                            <div class="boxes">
-                                <div class="rect"><img src="img/Call.png" alt=""></div>
-                                <p class="box_title">24/7<br>Support</p>
-                            </div>
-                        </a>
+            <div class="main_second_part">
+                <div class="second_side up">
+                    <div class="block_one blocks">
+                        <p class="block_number">18</p>
+                        <p class="block_description">Years Expirience</p>
                     </div>
-                    <a href="#" class="link_box_center">
-                        <div class="solo_box boxes">
-                            <div class="rect"><img src="img/3 User.png" alt=""></div>
-                            <p class="box_title">Professional<br>Team</p>
+                    <div class="block_two blocks">
+                        <p class="block_number">9.5/10</p>
+                        <p class="block_description">Average rating</p>
+                    </div>
+                </div>
+                <div class="second_side down">
+                    <div class="block_three blocks">
+                        <p class="block_number">240+</p>
+                        <p class="block_description">Completed Projects</p>
+                    </div>
+                    <div class="block_four blocks">
+                        <p class="block_number">150+</p>
+                        <p class="block_description">Served</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main_two">
+            <p class="title">Our Services</p>
+            <p class="second_title">What We Offer</p>
+            <div class="cards_div">
+                <div class=" card card_one shadow">
+                    <img src="img/Icon-wallet.png" alt="wallet" class="card_pic">
+                    <p class="card_text">#1</p>
+                    <p class="card_title">Finincial Report</p>
+                    <p class="card_text">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                </div>
+                <div class=" card card_two shadow">
+                    <img src="img/Icon-Backpack.png" alt="backpack" class="card_pic">
+                    <p class="card_text_two">#2</p>
+                    <p class="card_title_two">Manage Investments</p>
+                    <p class="card_text_two">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                </div>
+                <div class=" card card_three shadow">
+                    <img src="img/Icon-Analytic.png" alt="analytic" class="card_pic">
+                    <p class="card_text_three">#3</p>
+                    <p class="card_title_two">Finincial Report</p>
+                    <p class="card_text_three">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                </div>
+            </div>
+        </div>
+        <div class="main_three">
+            <p class="title_neg">Key Features</p>
+            <p class="second_title_neg">Manage Your<br>Finances From<br>one Place</p>
+            <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+            <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+            <a class="button main_button button-darkblue" href="#">Check All Fitures</a>
+            <img src="img/main pic.png" alt="main_pic" class="main_pic">
+            <img src="img/dotted.png" alt="dots" class="dots">
+        </div>
+        <div class="main_four">
+            <div class="four_left_side">
+                <div class="combo_box">
+                    <a href="#">
+                        <div class="boxes">
+                            <div class="rect"><img src="img/Game.png" alt=""></div>
+                            <p class="box_title">Innovative<br>Solutions</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="boxes">
+                            <div class="rect"><img src="img/Call.png" alt=""></div>
+                            <p class="box_title">24/7<br>Support</p>
                         </div>
                     </a>
                 </div>
-                <div class="four_text_side">
-                    <p class="title four_title">Start Now</p>
-                    <p class="second_title four_second_title">Start Now & Make<br>Your Finances<br>Clear & Organized</p>
-                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                </div>
+                <a href="#" class="link_box_center">
+                    <div class="solo_box boxes">
+                        <div class="rect"><img src="img/3 User.png" alt=""></div>
+                        <p class="box_title">Professional<br>Team</p>
+                    </div>
+                </a>
             </div>
-            <div class="main_five">
-                <p class="title">Our Services</p>
-                <p class="second_title">Latest News</p>
-                <div class="news_div">
-                    <div class="news">
-                        <img src="img/new 1.png" alt="">
-                        <div class="out_of_image">
-                            <p class="text date">January 01, 2021</p>
-                            <p class="card_title_two black">How to Start a<br>Successful in 2020</p>
-                            <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-                            <a class="button button-blue" href="#">Read More</a>
-                        </div>
-                    </div>
-                    <div class="news">
-                        <img src="img/new 2.png" alt="">
-                        <div class="out_of_image">
-                            <p class="text date">January 01, 2021</p>
-                            <p class="card_title_two black">Grow Your Business with<br>Email Marketing</p>
-                            <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-                            <a class="button button-blue" href="#">Read More</a>
-                        </div>
-                    </div>
-                    <div class="news">
-                        <img src="img/new 3.png" alt="">
-                        <div class="out_of_image">
-                            <p class="text date">January 01, 2021</p>
-                            <p class="card_title_two black">The 4 Pillars Every Online Business</p>
-                            <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-                            <a class="button button-blue" href="#">Read More</a>
-                        </div>
+            <div class="four_text_side">
+                <p class="title four_title">Start Now</p>
+                <p class="second_title four_second_title">Start Now & Make<br>Your Finances<br>Clear & Organized</p>
+                <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+            </div>
+        </div>
+        <div class="main_five">
+            <p class="title">Our Services</p>
+            <p class="second_title">Latest News</p>
+            <div class="news_div">
+                <div class="news">
+                    <img src="img/new 1.png" alt="">
+                    <div class="out_of_image">
+                        <p class="text date">January 01, 2021</p>
+                        <p class="card_title_two black">How to Start a<br>Successful in 2020</p>
+                        <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                        <a class="button button-blue" href="#">Read More</a>
                     </div>
                 </div>
+                <div class="news">
+                    <img src="img/new 2.png" alt="">
+                    <div class="out_of_image">
+                        <p class="text date">January 01, 2021</p>
+                        <p class="card_title_two black">Grow Your Business with<br>Email Marketing</p>
+                        <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                        <a class="button button-blue" href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="news">
+                    <img src="img/new 3.png" alt="">
+                    <div class="out_of_image">
+                        <p class="text date">January 01, 2021</p>
+                        <p class="card_title_two black">The 4 Pillars Every Online Business</p>
+                        <p class="third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                        <a class="button button-blue" href="#">Read More</a>
+                    </div>
+                </div>
             </div>
-            <div class="main_six">
-                <p class="title cyan">Contact With Us</p>
-                <p class="second_title white">Interested?<br>Let's Start a Projects Together</p>
-                <a class="button main_button button-blue" href="#">Contact Us</a>
-            </div>
+        </div>
+        <div class="main_six">
+            <p class="title cyan">Contact With Us</p>
+            <p class="second_title white">Interested?<br>Let's Start a Projects Together</p>
+            <a class="button main_button button-blue" href="#">Contact Us</a>
         </div>
     </main>
     <footer>
