--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="scripts/jquery-3.7.1.js"></script>
     <link rel="icon" href="img/logo.ico" type=”image/x-icon”>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>WeFinance</title>
@@ -90,6 +91,41 @@
                     <p class="card_text_three">#3</p>
                     <p class="card_title_two">Finincial Report</p>
                     <p class="card_text_three">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                </div>
+            </div>
+
+            <div id="block-for-slider">
+                <div id="viewport">
+                    <ul id="slidewrapper">
+                        <li class="slide">
+                            <div class="item item_one shadow">
+                                <img src="img/Icon-wallet.png" alt="wallet" class="item_pic">
+                                <p class="item_text">#1</p>
+                                <p class="item_title">Finincial Report</p>
+                                <p class="item_text">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                            </div>
+                        </li>
+                        <li class="slide">
+                            <div class="item item_two shadow">
+                                <img src="img/Icon-Backpack.png" alt="backpack" class="item_pic">
+                                <p class="item_text_two">#2</p>
+                                <p class="item_title_two">Manage Investments</p>
+                                <p class="item_text_two">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                            </div>
+                        </li>
+                        <li class="slide">
+                            <div class="item item_three shadow">
+                                <img src="img/Icon-Analytic.png" alt="analytic" class="item_pic">
+                                <p class="item_text_three">#3</p>
+                                <p class="item_title_two">Finincial Report</p>
+                                <p class="item_text_three">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <div id="prev-next-btns">
+                        <div id="prev-btn"></div>
+                        <div id="next-btn"></div>
+                    </div>
                 </div>
             </div>
         </div>
