--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         </li>
                     </ul>
                     <div id="prev-next-btns">
-                        <div id="prev-btn"></div>
-                        <div id="next-btn"></div>
+                        <img src="img/ionicons_svg_md-arrow-round-back.png" id="prev-btn">
+                        <img src="img/ionicons_svg_md-arrow-round-forward.png" id="next-btn">
                     </div>
                 </div>
             </div>
